# pycounts_ad

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pycounts_ad/: __init__.py
tests/: test_pycounts_ad.py
