[tool.poetry]
name = "pycounts_ad"
version = "0.1.0"
description = "cCalculate word counts from a text file."
authors = ["Ashita Diwan"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
matplotlib = ">=3.10.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
